--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,44 +4,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_centerVertical="true"
+    android:layout_marginTop="5dp"
     tools:context=".MainActivity">
+
+    <!--    <TextView-->
+    <!--        android:id="@+id/textView2"-->
+    <!--        android:layout_width="150dp"-->
+    <!--        android:layout_height="50dp"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:layout_marginTop="20dp"-->
+    <!--        android:paddingTop="10dp"-->
+    <!--        android:text="WEED DETECTION"-->
+    <!--        android:textStyle="bold" />-->
 
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="200dp"
+
         android:layout_height="200dp"
+
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="75dp"
+
         tools:layout_editor_absoluteX="132dp"
         tools:layout_editor_absoluteY="101dp"
-        tools:srcCompat="@tools:sample/avatars" />
-
+        android:src="@drawable/download" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:layout_below="@id/imageView"
 
-        android:layout_marginTop="162dp"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="false"
+        android:layout_marginTop="50dp"
         android:text="select"
         tools:layout_editor_absoluteX="158dp"
         tools:layout_editor_absoluteY="291dp" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:layout_below="@id/button"
-        android:layout_marginTop="59dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
         android:text="predict"
         tools:layout_editor_absoluteX="160dp"
         tools:layout_editor_absoluteY="406dp" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
         android:layout_below="@id/button2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="70dp"
-        android:text="TextView" />
+        android:paddingLeft="30dp"
+        android:text=" "
+        android:textSize="20sp" />
+
+
+
+
 </RelativeLayout>
